# akd

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
contrib/: i3status-colored.sh  i3status.sh
man/: akd.1.in
src/: cmake.h.in  keyboard.h  keyboarddaemon.cpp  keyboarddaemon.h  keyboardsymbols.cpp  keyboardsymbols.h  keyboardsymbolsparser.h  layout.cpp  layout.h  main.cpp  parameters.cpp  parameters.h  shortcut.cpp  shortcut.h  version.h.in  windowparameters.h  x11deleters.cpp  x11deleters.h
